--- a/src/components/infopages/Privacy.astro
+++ b/src/components/infopages/Privacy.astro
@@ -3,7 +3,7 @@
     class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24">
     <div>
       <div class="relative mx-auto max-w-[40rem] pt-20 pb-24">
-        <h1 class="font-extrabold text-5xl text-black font-display">
+        <h1 class="text-4xl tracking-tight font-medium text-black md:text-5xl font-display">
           Privacy policy
         </h1>
         <p class="mt-4 text-base lea ding-7 text-gray-500">
