--- a/src/components/infopages/Terms.astro
+++ b/src/components/infopages/Terms.astro
@@ -4,7 +4,7 @@
     <div>
       <div class="relative mx-auto max-w-[40rem] pt-20 pb-24">
         <h1
-          class="text-black font-extrabold lg:text-5xl text-4xl tracking-tight">
+          class="text-4xl tracking-tight font-medium text-black md:text-5xl font-display">
           Terms and conditions
         </h1>
         <p class="mt-4 text-base leading-7 text-gray-500">
