--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -8,7 +8,7 @@
             class="relative rounded-full py-1 px-3 text-sm leading-6 text-gray-600 ring-1 ring-gray-900/10 hover:ring-gray-900/20">
             <a
               href="https://lexingtonthemes.com/free-templates/"
-              class="font-semibold text-indigo-600"
+              class="font-semibold text-accent-600"
               ><span class="absolute inset-0" aria-hidden="true"></span>
               <span class="block lg:inline">
                 More free & Premium templates <span aria-hidden="true"
@@ -19,7 +19,7 @@
           </div>
         </div>
         <p
-          class="text-black mt-8 font-extrabold lg:text-5xl text-4xl tracking-tight">
+          class="text-4xl tracking-tight font-medium text-black md:text-5xl font-display mt-8">
           A starter template built with Astro and Tailwind CSS for your next
           project
         </p>
@@ -58,9 +58,9 @@
       </dl>
     </div>
     <div class="relative w-full mx-auto max-w-7xl items-center py-12 pb-12">
-      <div class="bg-gray-100 p-8 rounded-3xl" style="">
+      <div class="bg-gray-100 p-8 rounded-3xl">
         <img
-          alt=""
+          alt="#_"
           class="relative w-full border lg:rounded-2xl object-cover rounded shadow-2xl"
           src="https://brightlight.lexingtonthemes.com/assets/dashboard.svg"
         />
