--- a/src/components/Forms/Signup.astro
+++ b/src/components/Forms/Signup.astro
@@ -1,14 +1,18 @@
 <section>
   <div
-    class="flex relative justify-center lg:px-0 max-h-full md:px-12 overflow-hidden">
+    class="flex relative justify-center lg:px-0 items-center lg:h-screen md:px-12 overflow-hidden"
+  >
     <div
-      class="bg-white px-4 relative flex flex-1 flex-col h-screen lg:py-24 md:flex-none md:px-28 py-10 sm:justify-center xl:py-36 z-10">
+      class="bg-white px-4 relative flex flex-1 flex-col lg:py-24 md:flex-none md:px-28 py-10 sm:justify-center xl:py-36 z-10"
+    >
       <div
-        class="w-full lg:h-full max-w-md md:max-w-sm md:px-0 md:w-96 mx-auto sm:px-4">
+        class="w-full lg:h-full max-w-md md:max-w-sm md:px-0 md:w-96 mx-auto sm:px-4"
+      >
         <div class="flex flex-col">
           <div>
             <h2
-              class="font-medium leading-tight text-black text-xl font-display">
+              class="font-medium leading-tight text-black text-xl font-display"
+            >
               Sign up to AstroSaaS
             </h2><div class="py-3">
               <span class="w-full inline-flex relative mt-3 z-0"
@@ -38,7 +42,8 @@
               </span><div class="py-3 relative">
                 <div
                   class="flex absolute inset-0 items-center"
-                  aria-hidden="true">
+                  aria-hidden="true"
+                >
                   <div class="w-full border-t border-gray-300"></div>
                 </div><div class="flex relative justify-center">
                   <span class="bg-white text-sm px-2 text-gray-500"
@@ -49,10 +54,11 @@
             </div>
           </div>
         </div>
-        <form action="https://submit-form.com/r4PIGvAB">
-          <input name="hidden" autocomplete="false" style="display:none" />
-          <input name="_redirect" type="hidden" value="#" /><div
-            class="space-y-6">
+        <form >
+
+          <div
+            class="space-y-6"
+          >
             <div class="w-full flex flex-row gap-3">
               <div class="w-full">
                 <label class="sr-only" for="first_name">First name</label>
@@ -73,16 +79,20 @@
                 />
               </div>
             </div><div>
-              <label class="sr-only" name="name"
-                >User name or email Adress</label
+              <label for="last_name" class="sr-only" name="email"
+                >Email Adress</label
               >
               <input
+                id="email"
+                name="email"
                 class="w-full focus:outline-none border py-3 appearance-none h-12 bg-gray-50 block border-gray-200 focus:bg-white focus:border-accent-500 focus:ring-accent-500 placeholder-gray-400 px-3 rounded-xl sm:text-sm text-accent-500"
                 placeholder="Type here..."
               />
             </div><div class="col-span-full">
-              <label class="sr-only" name="company">Password</label>
+              <label class="sr-only" for="company" name="company">Password</label>
               <input
+               id="company"
+                name="company"
                 class="w-full focus:outline-none border py-3 appearance-none h-12 bg-gray-50 block border-gray-200 focus:bg-white focus:border-accent-500 focus:ring-accent-500 placeholder-gray-400 px-3 rounded-xl sm:text-sm text-accent-500"
                 placeholder="Type password here..."
                 type="password"
