--- a/src/components/landing/SectionOne.astro
+++ b/src/components/landing/SectionOne.astro
@@ -1,15 +1,16 @@
 <section id="features">
   <div
-    class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24 scroll-mt-12">
-    <div class="mx-auto max-w-2xl text-center">
+    class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24 scroll-mt-12"
+  >
+    <div class="mx-auto max-w-xl text-center">
       <div>
         <p
-          class="text-black font-extrabold lg:text-5xl text-4xl tracking-tighter">
-          I am a slightly longer <span class="lg:block"
-            >heading than the others
-          </span>
+          class="text-4xl tracking-tight font-medium text-black md:text-5xl font-display"
+        >
+          I am a slightly longer heading than the others
         </p><p
-          class="mt-4 text-lg max-w-xl mx-auto tracking-tight text-gray-500">
+          class="mt-4 text-lg text-na mx-auto tracking-tight text-gray-500"
+        >
           If you could kick the person in the pants responsible for most of your
           trouble, you wouldn't sit for a month
         </p>
@@ -19,19 +20,21 @@
       <div class="mx-auto max-w-7xl pt-12">
         <h2 class="sr-only">Features.</h2><div>
           <div
-            class="grid gap-12 grid-cols-1 lg:space-y-0 lg:text-center md:grid-cols-3">
+            class="grid gap-12 grid-cols-1 lg:space-y-0 lg:text-center md:grid-cols-3"
+          >
             <div>
               <div>
                 <div
-                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto">
+                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
+                >
                   <ion-icon
                     aria-label="scan outline"
                     class="hydrated md h-4 w-4"
                     name="scan-outline"
-                    role="img"
-                  />
+                    role="img"></ion-icon>
                 </div><p
-                  class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight">
+                  class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
+                >
                   Built with Astro.js.
                 </p>
               </div><div class="mt-4 text-gray-500 text-sm">
@@ -41,15 +44,16 @@
             </div><div>
               <div>
                 <div
-                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto">
+                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
+                >
                   <ion-icon
                     aria-label="scan outline"
                     class="hydrated md h-4 w-4"
                     name="scan-outline"
-                    role="img"
-                  />
+                    role="img"></ion-icon>
                 </div><p
-                  class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight">
+                  class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
+                >
                   Styled with Tailwind CSS.
                 </p>
               </div><div class="mt-4 text-gray-500 text-sm">
@@ -60,15 +64,16 @@
             </div><div>
               <div>
                 <div
-                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto">
+                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
+                >
                   <ion-icon
                     aria-label="scan outline"
                     class="hydrated md h-4 w-4"
                     name="scan-outline"
-                    role="img"
-                  />
+                    role="img"></ion-icon>
                 </div><p
-                  class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight">
+                  class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
+                >
                   Relived with Alpine.js
                 </p>
               </div><div class="mt-4 text-gray-500 text-sm">
@@ -78,15 +83,16 @@
             </div><div>
               <div>
                 <div
-                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto">
+                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
+                >
                   <ion-icon
                     aria-label="scan outline"
                     class="hydrated md h-4 w-4"
                     name="scan-outline"
-                    role="img"
-                  />
+                    role="img"></ion-icon>
                 </div><p
-                  class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight">
+                  class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
+                >
                   Keyboard accessible.
                 </p>
               </div><div class="mt-4 text-gray-500 text-sm">
@@ -97,15 +103,16 @@
             </div><div>
               <div>
                 <div
-                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto">
+                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
+                >
                   <ion-icon
                     aria-label="scan outline"
                     class="hydrated md h-4 w-4"
                     name="scan-outline"
-                    role="img"
-                  />
+                    role="img"></ion-icon>
                 </div><p
-                  class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight">
+                  class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
+                >
                   Production-ready
                 </p>
               </div><div class="mt-4 text-gray-500 text-sm">
@@ -115,15 +122,16 @@
             </div><div>
               <div>
                 <div
-                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto">
+                  class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
+                >
                   <ion-icon
                     aria-label="scan outline"
                     class="hydrated md h-4 w-4"
                     name="scan-outline"
-                    role="img"
-                  />
+                    role="img"></ion-icon>
                 </div><p
-                  class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight">
+                  class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
+                >
                   Simple deploys
                 </p>
               </div><div class="mt-4 text-gray-500 text-sm">
