--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,15 +1,18 @@
 ---
 import BaseHead from "../components/BaseHead.astro";
+import Navigation from "../components/global/Navigation.astro";
+import Footer from "../components/global/Footer.astro";
 ---
-
 <html
   lang="en"
-  class="scroll-smooth selection:bg-accent-500 selection:text-white no-touchevents hydrated">
+  class="scroll-smooth selection:bg-accent-500 selection:text-white no-touchevents hydrated"
+>
   <head>
     <BaseHead />
   </head>
-
-  <body class="bg-white">
-    <slot />
+  <body class="bg-white flex flex-col min-h-svh">
+    <Navigation/>
+    <main class="grow"><slot /></main>
+    <Footer/>
   </body>
 </html>
